# pinc-static

./: .gitignore  Makefile  README.md  dune-project  pinc-static.opam  pinc-static.opam.locked  pinc-static.opam.template
.github/workflows/: build.yml
lib/: declarations.ml  declarations.mli  dune  pinc_static.ml  tag_data_provider.ml  tag_data_provider.mli  watcher.ml
test/: Section.pi  Section~Intro.yaml  Section~NoIntro.yaml
